--- a/example/src/example/Example.css
+++ b/example/src/example/Example.css
@@ -1,23 +1,20 @@
 .warning {
   background-color: #be4b49;
-  border-radius: 2px;
-  box-shadow:
-    0 0 0 1px rgba(139, 3, 0, 0.75),
-    0 1px 10px rgba(0, 0, 0, 0.35);
   box-sizing: border-box;
   color: #fff;
   display: block;
   font-size: 1.6rem;
   line-height: 1.2;
   margin: 0 0 20px 0;
+  border-radius: 4px;
   padding: 20px;
   text-align: center;
 }
 
 .example {
-  background: #edf0f5;
-  border: 1px solid #bdc7d8;
-  border-radius: 3px;
+  background: #f4f4f4;
+  border: 1px solid #c8c8c8;
+  border-radius: 16px;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 20px;
@@ -60,7 +57,7 @@
 .example input[type='text'],
 .example input[type='password'] {
   border: 1px solid #bdc7d8;
-  border-radius: 3px;
+  border-radius: 4px;
   box-sizing: border-box;
   display: block;
   font-size: 1.5rem;
@@ -88,7 +85,7 @@
 
 .example select {
   border: 1px solid #bdc7d8;
-  border-radius: 3px;
+  border-radius: 4px;
   box-sizing: border-box;
   display: block;
   font-size: 1.1rem;
@@ -103,11 +100,10 @@
 }
 
 .example button {
-  background: linear-gradient(#67ae55, #578843);
+  background: #67ae55;
   border: 1px solid;
-  border-color: #3b6e22 #3b6e22 #2c5115;
+  border-color: #40ae25;
   border-radius: 5px;
-  box-shadow: inset 0 1px 1px #a4e388;
   color: #fff;
   cursor: pointer;
   display: inline-block;
@@ -118,11 +114,10 @@
   padding: 8px 20px;
   position: relative;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .example button:hover {
-  background: linear-gradient(#79bc64, #578843);
+  background: #79bc64;
 }
 
 .example button:active {
@@ -163,16 +158,12 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  margin: 0 0 12px 0;
   padding: 0;
 }
 
 .sentence {
-  background: linear-gradient(#dddde8, #ccccdd);
-  border-radius: 3px;
-  box-shadow:
-    0 0 0 1px rgba(139, 3, 0, 0.75),
-    0 1px 10px rgba(0, 0, 0, 0.35);
+  background: #dddde8;
+  border-radius: 4px;
   box-sizing: border-box;
   font-size: 1.5rem;
   padding: 0.5em;
