--- a/example/src/example/Example.css
+++ b/example/src/example/Example.css
@@ -1,16 +1,3 @@
-.warning {
-  background-color: #be4b49;
-  box-sizing: border-box;
-  color: #fff;
-  display: block;
-  font-size: 1.6rem;
-  line-height: 1.2;
-  margin: 0 0 20px 0;
-  border-radius: 4px;
-  padding: 20px;
-  text-align: center;
-}
-
 .example {
   background: #f4f4f4;
   border: 1px solid #c8c8c8;
@@ -18,7 +5,20 @@
   box-sizing: border-box;
   margin: 0 auto;
   padding: 20px;
-  width: 480px;
+  width: 600px;
+}
+
+.headline {
+  background-color: #565656;
+  box-sizing: border-box;
+  color: #fff;
+  display: block;
+  font-size: 2rem;
+  line-height: 1.2;
+  margin: 0 0 20px 0;
+  border-radius: 14px;
+  padding: 12px;
+  text-align: center;
 }
 
 .example h1 {
